LOOKS: Add GitHub-style syntax highlighting CSS

--- a/source/stylesheets/main.scss
+++ b/source/stylesheets/main.scss
@@ -2,6 +2,7 @@
 // Bootstrap variables here:
 //   https://github.com/twbs/bootstrap-sass/blob/master/assets/stylesheets/bootstrap/_variables.scss
 @import "vendor/normalise";
+@import "vendor/pygments-github";
 @import "compass";
 @import "bootstrap-sprockets";
 @import "bootstrap";
