--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,9 +1,5 @@
----
-title: Welcome to Middleman
----
-
 <div class="jumbotron text-center">
-  <h1>Middleman is Watching</h1>
+  <h1>SplashKit</h1>
   <p class="lead">
     Like Middleman? Read more about it <%= link_to "here", "http://middlemanapp.com/" %>
   </p>
