NEW: Add a simple global navigation bar

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -9,26 +9,38 @@
     <!-- Bootstrap support for mobile -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Use title if it's in the page YAML frontmatter -->
-    <title><%= current_page.data.title || "The Middleman" %></title>
+    <!-- Generate the title -->
+    <title>SplashKit - <%= sitemap_page_title || "Home" %></title>
 
     <%= stylesheet_link_tag "main" %>
     <%= javascript_include_tag  "main" %>
   </head>
 
   <body class="<%= page_classes %>">
-    <nav>
-      <!-- global navigation here -->
-    </nav>
-    <header>
-      <!-- global header here -->
-    </header>
-    <main class="container-fluid">
+    <div class="container-fluid nav-container">
+      <nav class="navbar navbar-inverse">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">SplashKit</a>
+        </div>
+        <div class="collapse navbar-collapse" id="navbar">
+          <ul class="nav navbar-nav">
+            <li><a href="/getting-started">Getting Started</a></li>
+          </ul>
+        </div>
+      </nav>
+    </div><!--/nav-container-->
+    <main class="container">
       <%= yield %>
-    </main>
+    </main><!--/main-container-->
     <footer>
       <!-- global footer here -->
       &copy; My Company 2015
-    </footer>
+    </footer><!--/footer-->
   </body>
 </html>
