Crash problem fixed

--- a/SplashKit_Install/mainwindow.ui
+++ b/SplashKit_Install/mainwindow.ui
@@ -6,19 +6,23 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>387</height>
+    <width>702</width>
+    <height>268</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>SplashKit Installation Wizard</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="icons.qrc">
+    <normaloff>:/icons/skbox-5d36169d.svg</normaloff>:/icons/skbox-5d36169d.svg</iconset>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QPushButton" name="btn_install">
     <property name="geometry">
      <rect>
-      <x>690</x>
-      <y>350</y>
+      <x>600</x>
+      <y>230</y>
       <width>93</width>
       <height>29</height>
      </rect>
@@ -30,8 +34,8 @@
    <widget class="QPushButton" name="btn_cancel">
     <property name="geometry">
      <rect>
-      <x>590</x>
-      <y>350</y>
+      <x>500</x>
+      <y>230</y>
       <width>93</width>
       <height>29</height>
      </rect>
@@ -43,8 +47,8 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>320</x>
-      <y>40</y>
+      <x>230</x>
+      <y>10</y>
       <width>461</width>
       <height>51</height>
      </rect>
@@ -62,8 +66,8 @@
    <widget class="QLineEdit" name="txt_path">
     <property name="geometry">
      <rect>
-      <x>320</x>
-      <y>160</y>
+      <x>227</x>
+      <y>90</y>
       <width>431</width>
       <height>26</height>
      </rect>
@@ -72,8 +76,8 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>320</x>
-      <y>130</y>
+      <x>230</x>
+      <y>60</y>
       <width>181</width>
       <height>20</height>
      </rect>
@@ -85,8 +89,8 @@
    <widget class="QToolButton" name="btn_sel_path">
     <property name="geometry">
      <rect>
-      <x>753</x>
-      <y>160</y>
+      <x>660</x>
+      <y>90</y>
       <width>31</width>
       <height>26</height>
      </rect>
@@ -98,10 +102,10 @@
    <widget class="Line" name="line">
     <property name="geometry">
      <rect>
-      <x>270</x>
-      <y>30</y>
+      <x>210</x>
+      <y>10</y>
       <width>20</width>
-      <height>341</height>
+      <height>251</height>
      </rect>
     </property>
     <property name="orientation">
@@ -111,8 +115,8 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>100</y>
+      <x>50</x>
+      <y>40</y>
       <width>131</width>
       <height>111</height>
      </rect>
@@ -121,7 +125,7 @@
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap>C:/Users/infoa/OneDrive/Desktop/skbox-5d36169d.svg</pixmap>
+     <pixmap resource="icons.qrc">:/icons/skbox-5d36169d.svg</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -130,9 +134,9 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>240</y>
-      <width>171</width>
+      <x>10</x>
+      <y>160</y>
+      <width>211</width>
       <height>41</height>
      </rect>
     </property>
@@ -155,8 +159,8 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>320</x>
-      <y>200</y>
+      <x>230</x>
+      <y>120</y>
       <width>461</width>
       <height>16</height>
      </rect>
@@ -171,10 +175,10 @@
    <widget class="QLabel" name="txt_process">
     <property name="geometry">
      <rect>
-      <x>320</x>
-      <y>220</y>
+      <x>230</x>
+      <y>140</y>
       <width>461</width>
-      <height>111</height>
+      <height>91</height>
      </rect>
     </property>
     <property name="text">
@@ -192,6 +196,8 @@
    </widget>
   </widget>
  </widget>
- <resources/>
+ <resources>
+  <include location="icons.qrc"/>
+ </resources>
  <connections/>
 </ui>
